--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <title>Home - Medra Theme</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="styles/medra.css" />
-    <link rel="stylesheet" href="styles/font-awesome/4.7.0/css/font-awesome.min.css" /> 
+    <link rel="stylesheet" href="src/css/medra.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -14,23 +13,23 @@
     <header class="container-fluid m-0 p-0">
         <section class="secondary-nav-container">
             <div class="container-md">
-                <nav class="navbar navbar-expand navbar-light mr-auto p-0">
+                <nav class="navbar navbar-expand navbar-light me-auto p-0">
                     <div class="navbar-nav h-100">
                         <a href="#" class="nav-link p-1 px-2">about</a>
-                        <a href="contact.html" class="nav-link p-1 px-2">contacts</a>
+                        <a href="contact.html" class="nav-link p-1 px-2 active">contacts</a>
                     </div>
-                    <div class="d-flex ml-auto h-100">
+                    <div class="d-flex ms-auto h-100">
                         <div class="position-relative d-inline-block">
-                            <a href="#" class="btn btn-transparent border-0 shadow-none p-1 px-2 text-secondary collapse-toggle" data-toggle="collapse" data-target="#search-bar-container" aria-expanded="false">
-                                <span class="fa fa-search"></span>
+                            <a href="#" class="btn btn-transparent border-0 shadow-none p-1 px-2 text-secondary collapse-toggle" data-bs-toggle="collapse" data-bs-target="#search-bar-container" aria-expanded="false">
+                                <span class="bx bx-search"></span>
                             </a>
                         </div>
                         <div class="dropdown position-relative d-inline-block user-meta-container"><!--header-user-meta-->
-                            <a href="#" class="btn btn-transparent border-0 shadow-none dropdown-toggle p-1 px-2 text-secondary" data-toggle="dropdown"><span class="fa fa-user"></span></a>
-                            <div class="dropdown-menu p-0 text-muted shadow-sm med-animation-dropdown-menu med-animation-normal">
-                                <a href="#" class="dropdown-item px-1 bg-light med-bg-transition">login</a>
-                                <a href="#" class="dropdown-item px-1 bg-light med-bg-transition">sigup</a>
-                            </div>
+                            <a href="#" class="btn btn-transparent border-0 shadow-none dropdown-toggle p-1 px-2 text-secondary" data-bs-toggle="dropdown"><span class="bx bx-user"></span></a>
+                            <ul class="dropdown-menu p-0 shadow text-muted med-animation-dropdown-menu med-animation-normal">
+                                <li><a href="login.html" class="dropdown-item px-3 py-2 bg-transparent med-bg-transition">login</a></li>
+                                <li><a href="signup.html" class="dropdown-item px-3 py-2 bg-transparent med-bg-transition">sigup</a></li>
+                            </ul>
                         </div><!--.header-user-meta-->
                     </div>
                 </nav>
@@ -39,7 +38,7 @@
                         <div class="position-relative">
                             <input type="search" class="form-control border-info rounded-pill shadow-none h-100 search-bar med-bg-transition med-transition-ease-out" value="" placeholder="Search..." />
                             <button type="submit" class="btn p-1 shadow-none border-0 position-absolute h-100 text-muted search-bar-icon">
-                                <span class="fa fa-search fa-lg"></span>
+                                <span class="bx bx-search"></span>
                             </button>
                         </div>
                     </form>
@@ -53,11 +52,11 @@
         </section>
         <section class="container-md navbar-container">
             <nav class="navbar navbar-expand-lg navbar-light main-navbar">
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".main-navbar-nav"><span class="navbar-toggler-icon"></span></button>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".main-navbar-nav"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse main-navbar-nav">
                     <ul class="navbar-nav">
-                        <li class="nav-item active"><a href="index.html" class="nav-link">home</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">curses</a>
+                        <li class="nav-item"><a href="index.html" class="nav-link">home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">curses</a>
                             <ul class="dropdown-menu shadow-sm p-0 m-0 med-animation-dropdown-menu med-animation-normal">
                                 <li class="dropdown-item"><a href="#" class="nav-link">web development</a></li>
                                 <li class="dropdown-item"><a href="#" class="nav-link">software development</a></li>
@@ -232,15 +231,13 @@
                     </div>
                     <div class="col-6 text-right text-muted">
                         <div class="site-copyright">
-                            <small class="m-0 p-0">(c) Medra 2021</small>
+                            <small class="m-0 p-0">(c) Medra 2023</small>
                         </div>
                     </div>
                 </div>
             </section><!--.copyright-section-->
         </section>
     </footer><!--.site-footer-->
-    <script src="../4.6.0/js/bootstrap.min.js"></script>
-    <script src="../4.6.0/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts/medra.js"></script>
+    <script src="src/js/medra.js"></script>
 </body>
 </html>
